--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -59,6 +59,7 @@
               <li><a href="#" class=""><span class="icon-twitter"></span></a></li>
               <li><a href="#" class=""><span class="icon-instagram"></span></a></li>
               <li><a href="#" class=""><span class="icon-linkedin"></span></a></li>
+              <li>Move this stuff to the floating footer?</li>
             </ul>
           </div>
           <div class="col-6">
@@ -71,22 +72,21 @@
 
     <header class="site-navbar js-sticky-header py-4 site-navbar-target bg-white ff-JSH" role="banner">
 
-      <div>
-        <div class="row align-items-center nav-element">
+      <div class="container">
+        <div class="row align-items-center">
           <div class="col-6 col-xl-2">
-            <h1 class="mb-0 site-logo"><a href="/index.html" class="mb-0"><img th:src="@{/images/logos/og_logo.png}" class="fluid-img" ><span class="text-primary"></span> </a></h1>
+            <h1 class="mb-0 site-logo"><a href="/index.html" class="mb-0"><img th:src="@{/images/logos/og_logo.png}" class="img-fluid" ><span class="text-primary"></span> </a></h1>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block">
-            <nav class="site-navigation position-relative" role="navigation">
+            <nav class="site-navigation position-relative text-left" role="navigation">
 
-              <ul class="site-menu main-menu">
-                <li><a href="#home-section" class="nav-element">Home</a></li>
-                <li><a href="#events-section" class="nav-element">Events</a></li>
-                <li><a href="#staff-picks-section" class="nav-element">Staff Picks</a></li>
+              <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
+                <li><a href="#home-section" class="nav-link">Home</a></li>
+                <li><a href="#events-section" class="nav-link">Events</a></li>
+                <li><a href="#staff-picks-section" class="nav-link">Staff Picks</a></li>
 			<!--<li><a href="#event-details" class="nav-link">Event History</a></li> -->
-          		<li><a href="" class="nav-element">Photos</a></li>         
-          		<li><a href="" class="nav-element">Search</a></li>
-          		<li></li> <!-- spacing -->
+          		<li><a href="" class="nav-link">Photos</a></li>         
+          		<li><a href="" class="nav-link">Search</a></li>
               </ul>
             </nav>
           </div>
