--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -223,12 +223,12 @@
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-6 mb-5">
-            <div class="product-item">
-              <figure>
-                <img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="img-fluid">
+            <div class="staff-pick">
+              <figure class="box-shadow">
+                <img th:src="@{/images/books/book.png}" alt="book" class="img-fluid">
               </figure>
-              <div class="px-4">
-                <h3><a href="#">Wild West Hoodie</a></h3>
+              <div>
+                <h3 class="ff-NSB"><a href="#">Book</a></h3>
                 <div class="mb-3">
                   <span class="meta-icons mr-3"><a href="#" class="mr-2"><span class="icon-star text-warning"></span></a> 5.0</span>
                   <span class="meta-icons wishlist"><a href="#" class="mr-2"><span class="icon-heart"></span></a> 29</span>
@@ -243,32 +243,12 @@
           </div>
 
           <div class="col-lg-4 col-md-6 mb-5">
-            <div class="product-item">
-              <figure>
-                <img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="img-fluid">
+            <div class="staff-pick">
+              <figure class="box-shadow">
+                <img th:src="@{/images/books/book1.png}" alt="book 1" class="img-fluid">
               </figure>
-              <div class="px-4">
-                <h3><a href="#">Wild West Hoodie</a></h3>
-                <div class="mb-3">
-                  <span class="meta-icons mr-3"><a href="#" class="mr-2"><span class="icon-star text-warning"></span></a> 5.0</span>
-                  <span class="meta-icons wishlist active"><a href="#" class="mr-2"><span class="icon-heart"></span></a> 29</span>
-                </div>
-                <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-                <div>
-                  <a href="#" class="btn btn-black mr-1 rounded-0">Cart</a>
-                  <a href="#" class="btn btn-black btn-outline-black ml-1 rounded-0">View</a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mb-5">
-            <div class="product-item">
-              <figure>
-                <img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="img-fluid">
-              </figure>
-              <div class="px-4">
-                <h3><a href="#">Wild West Hoodie</a></h3>
+              <div>
+                <h3 class="ff-NSB"><a href="#">Book One</a></h3>
                 <div class="mb-3">
                   <span class="meta-icons mr-3"><a href="#" class="mr-2"><span class="icon-star text-warning"></span></a> 5.0</span>
                   <span class="meta-icons wishlist"><a href="#" class="mr-2"><span class="icon-heart"></span></a> 29</span>
@@ -283,12 +263,32 @@
           </div>
 
           <div class="col-lg-4 col-md-6 mb-5">
-            <div class="product-item">
-              <figure>
-                <img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="img-fluid">
+            <div class="staff-pick">
+              <figure class="box-shadow">
+                <img th:src="@{/images/books/book2.png}" alt="book 2" class="img-fluid">
               </figure>
-              <div class="px-4">
-                <h3><a href="#">Wild West Hoodie</a></h3>
+              <div>
+                <h3 class="ff-NSB"><a href="#">Book Two</a></h3>
+                <div class="mb-3">
+                  <span class="meta-icons mr-3"><a href="#" class="mr-2"><span class="icon-star text-warning"></span></a> 5.0</span>
+                  <span class="meta-icons wishlist"><a href="#" class="mr-2"><span class="icon-heart"></span></a> 29</span>
+                </div>
+                <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+                <div>
+                  <a href="#" class="btn btn-black mr-1 rounded-0">Cart</a>
+                  <a href="#" class="btn btn-black btn-outline-black ml-1 rounded-0">View</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-5">
+            <div class="staff-pick">
+              <figure class="box-shadow">
+                <img th:src="@{/images/books/book3.png}" alt="book 3" class="img-fluid">
+              </figure>
+              <div>
+                <h3 class="ff-NSB"><a href="#">Book Three</a></h3>
                 <div class="mb-3">
                   <span class="meta-icons mr-3"><a href="#" class="mr-2"><span class="icon-star text-warning"></span></a> 5.0</span>
                   <span class="meta-icons wishlist"><a href="#" class="mr-2"><span class="icon-heart"></span></a> 29</span>
@@ -303,12 +303,12 @@
           </div>
           
           <div class="col-lg-4 col-md-6 mb-5">
-            <div class="product-item">
-              <figure>
-                <img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="img-fluid">
+            <div class="staff-pick">
+              <figure class="box-shadow">
+                <img th:src="@{/images/books/book4.png}" alt="book 4" class="img-fluid">
               </figure>
-              <div class="px-4">
-                <h3><a href="#">Wild West Hoodie</a></h3>
+              <div>
+                <h3 class="ff-NSB"><a href="#">Book Four</a></h3>
                 <div class="mb-3">
                   <span class="meta-icons mr-3"><a href="#" class="mr-2"><span class="icon-star text-warning"></span></a> 5.0</span>
                   <span class="meta-icons wishlist"><a href="#" class="mr-2"><span class="icon-heart"></span></a> 29</span>
@@ -323,12 +323,12 @@
           </div>
 
           <div class="col-lg-4 col-md-6 mb-5">
-            <div class="product-item">
-              <figure>
-                <img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="img-fluid">
+            <div class="staff-pick">
+              <figure class="box-shadow">
+                <img th:src="@{/images/books/book5.png}" alt="book 5" class="img-fluid">
               </figure>
-              <div class="px-4">
-                <h3><a href="#">Wild West Hoodie</a></h3>
+              <div>
+                <h3 class="ff-NSB"><a href="#">Book Five</a></h3>
                 <div class="mb-3">
                   <span class="meta-icons mr-3"><a href="#" class="mr-2"><span class="icon-star text-warning"></span></a> 5.0</span>
                   <span class="meta-icons wishlist"><a href="#" class="mr-2"><span class="icon-heart"></span></a> 29</span>
