minor variable edits, cool box shadow added to welcome section

--- a/webapp/src/main/resources/static/css/style.css
+++ b/webapp/src/main/resources/static/css/style.css
@@ -132,31 +132,31 @@ h1, h2, h3, h4, h5,
     background: #56585a;
     color: #fff2e0; }
 .btn.btn-black:hover {
-  color: #000;
+  color: black;
     border: 2px solid black;
   background-color: transparent; }
 .btn.btn-black.btn-outline-black {
-  color: #000;
+  color: black;
   background-color: transparent; }
 .btn.btn-black.btn-outline-black:hover {
-  border-color: #000;
-  background: #000;
-  color: #fff; }
+  border-color: black;
+  background: black;
+  color: white; }
 .btn.btn-white {
   border-width: 2px;
-  border-color: #fff;
-  background: #fff;
-  color: #000; }
+  border-color: white;
+  background: white;
+  color: black; }
 .btn.btn-white:hover {
-  color: #fff;
+  color: white;
   background-color: transparent; }
 .btn.btn-white.btn-outline-white {
-  color: #fff;
+  color: white;
   background-color: transparent; }
 .btn.btn-white.btn-outline-white:hover {
-  border-color: #fff;
-  background: #fff;
-  color: #000; }
+  border-color: white;
+  background: white;
+  color: black; }
 
 .line-height-1 {
   line-height: 1 ; }
@@ -1889,7 +1889,7 @@ h1, h2, h3, h4, h5,
 	background-color: var(--deep-red);
 }
 
-.sticky-contact-footer
+.sticky-footer
 {
 	z-index: 100;
 	position: sticky;
@@ -1899,7 +1899,7 @@ h1, h2, h3, h4, h5,
     -webkit-box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.2);
     box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.2); 
 }
-.sticky-contact-footer p
+.sticky-footer p
 {
 	position: relative;	
 	top: 10%;
