--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -3,8 +3,7 @@
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
   <head>
-    <!-- <title>Selling &mdash; Website by Colorlib</title> -->
-    <title> Central Book Exchange</title>
+    <title>Central Book Exchange</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -107,7 +106,7 @@
           <div class="col-md-12" data-aos="fade-up" data-aos-delay="400">
                         
             <div class="row mb-4">
-              <div class="col-md-7" th:style="'background: rgb(6,6,8,0.75);'">
+              <div class="col-md-7" th:style="'background: rgb(6,6,8,0.75); box-shadow: 0 4px 8px 0 rgba(0, 0, 0), 0 6px 20px 0 rgba(0, 0, 0, 0.49)'">
                 <h1 class="ff-JSO">Welcome</h1>
                 <p class="mb-5 text-white ff-N">We are an independently-owned new and used bookstore located in Salt Lake City, Utah. 
                   We have over 90,000 items in our constantly-changing inventory, and we catalog an additional 1,000+ books per week. 
@@ -507,9 +506,11 @@
     </footer>
     
   
-    <div class="sticky-contact-footer text-ink ff-JS">
+    <div class="sticky-footer text-ink ff-JS">
     	<p>2017 S 1100 E Salt Lake City, Utah<br>Contact Us: <a href="tel:8014853913">(801)-485-3913</a></p>
     </div>
+    
+    
   </div> <!-- .site-wrap -->
 
   <script th:src="@{/js/jquery-3.3.1.min.js}"></script>
