updated version build, minor header edit

--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -215,7 +215,7 @@
       <div class="container">
         <div class="row mb-5 justify-content-center">
           <div class="col-md-6 text-center">
-            <h3 class="section-sub-title">Our</h3>
+            <h3 class="section-sub-title">Recommended</h3>
             <h2 class="mb-3 ff-NG text-red">Staff Picks</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nostrum natus excepturi fuga ullam accusantium vel ut eveniet aut consequatur laboriosam ipsam.</p>
           </div>
