--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -48,17 +48,14 @@
       <div class="site-mobile-menu-body"></div>
     </div>
    
-    <div class="top-bar py-3 bg-red text-cream ff-JS" id="home-section">
+    <div class="top-bar py-3 bg-red text-white ff-JS" id="home-section">
       <div class="container">
         <div class="row align-items-center">
          
           <div class="col-6 text-left">
             <ul class="social-media">
-              <li><a href="#" class=""><span class="icon-facebook"></span></a></li>
-              <li><a href="#" class=""><span class="icon-twitter"></span></a></li>
-              <li><a href="#" class=""><span class="icon-instagram"></span></a></li>
-              <li><a href="#" class=""><span class="icon-linkedin"></span></a></li>
-              <li>Move this stuff to the floating footer?</li>
+              <li><a href="https://www.facebook.com/CentralBookExchange" class=""><span class="icon-facebook"></span></a></li>
+              <li><a href="https://www.instagram.com/centralbookexchange/" class=""><span class="icon-instagram"></span></a></li>
             </ul>
           </div>
           <div class="col-6">
@@ -107,7 +104,7 @@
                         
             <div class="row mb-4">
               <div class="col-md-7" th:style="'background: rgb(6,6,8,0.75); box-shadow: 0 4px 8px 0 rgba(0, 0, 0), 0 6px 20px 0 rgba(0, 0, 0, 0.49)'">
-                <h1 class="ff-JSO">Welcome</h1>
+                <h1 class="ff-JSO text-cream">Welcome</h1>
                 <p class="mb-5 text-white ff-N">We are an independently-owned new and used bookstore located in Salt Lake City, Utah. 
                   We have over 90,000 items in our constantly-changing inventory, and we catalog an additional 1,000+ books per week. 
                   Our inventory consists of almost every literary genre you can think of. Additionally, our book inventory holds some rare and out-of-print titles.<br>
@@ -475,10 +472,8 @@
               </div>
               <div class="col-md-4">
                 <h2 class="footer-heading mb-4">Follow Us</h2>
-                <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-                <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
+                <a href="https://www.facebook.com/CentralBookExchange" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+                <a href="https://www.instagram.com/centralbookexchange/" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
               </div>
             </div>
           </div>
