--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -105,15 +105,18 @@
             <div class="row mb-4">
               <div class="col-md-7" th:style="'background: rgb(6,6,8,0.75); box-shadow: 0 4px 8px 0 rgba(0, 0, 0), 0 6px 20px 0 rgba(0, 0, 0, 0.49)'">
                 <h1 class="ff-JSO text-cream">Welcome</h1>
-                <p class="mb-5 text-white ff-N">We are an independently-owned new and used bookstore located in Salt Lake City, Utah. 
+                <p class="mb-4 text-white ff-N">We are an independently-owned new and used bookstore located in Salt Lake City, Utah. 
                   We have over 90,000 items in our constantly-changing inventory, and we catalog an additional 1,000+ books per week. 
-                  Our inventory consists of almost every literary genre you can think of. Additionally, our book inventory holds some rare and out-of-print titles.<br>
-                  <br>If you have any questions, please give us a <a href="tel:8014853913">call</a> or <a href="mailto:customerservice@citywbooks.com">email</a> us. We're always happy to help!</p>
-                <div>
-                  <a href="#" class="btn btn-white btn-outline-white py-3 px-5 rounded-0 mb-2 d-block">Shop Now</a>
-                  <a href="#" class="btn btn-white btn-outline-white py-3 px-5 rounded-0 mb-2 d-block">Events</a>
-                  <a href="#" class="btn btn-white btn-outline-white py-3 px-5 rounded-0 mb-2 d-block">Book Exchange</a>
-                </div>
+                  Our inventory consists of almost every literary genre you can think of. Additionally, our book inventory holds some rare and out-of-print titles.
+             <!-- <br><br>If you have any questions, please give us a <a href="tel:8014853913">call</a> or <a href="mailto:customerservice@citywbooks.com">email</a> us. <br>We're always happy to help! -->
+                  <br><br>If you're looking to get rid of some of your books, you've come to the right place! 
+                  We have an <b>exchange system</b> in place that allows you to redeem your books for points, 
+                  which can then be used to <b>reduce the prices</b> of other books in our store. We also <b>selectively buy</b> 
+                  books, depending on the condition, popularity, titles, and authors.
+				  <br><br>Our process is quick and friendly. You don't need an appointment. 
+				  However, if you have a large quantity of books, then we would appreciate a call ahead of time.  
+				  If we can't get to your books right away, we'll always take your information down and look at them the next day. 
+				  We don't purchase magazines, Reader's Digests, or book club editions.</p>
               </div>
             </div>
           </div>
