--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -66,12 +66,12 @@
       </div> 
     </div>
 
-    <header class="site-navbar js-sticky-header py-4 site-navbar-target bg-white ff-JSH" role="banner">
+    <header class="site-navbar js-sticky-header py-3 site-navbar-target bg-white ff-JSH" role="banner">
 
       <div class="container">
         <div class="row align-items-center">
           <div class="col-6 col-xl-2">
-            <h1 class="mb-0 site-logo"><a href="/index.html" class="mb-0"><img th:src="@{/images/logos/og_logo.png}" class="img-fluid" ><span class="text-primary"></span> </a></h1>
+            <h1 class="mb-0 site-logo"><a href="/index.html" class="mb-0"><img th:src="@{/images/logos/og_logo.png}" class="fluid-img" ><span class="text-primary"></span> </a></h1>
           </div>
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-left" role="navigation">
@@ -103,9 +103,9 @@
           <div class="col-md-12" data-aos="fade-up" data-aos-delay="400">
                         
             <div class="row mb-4">
-              <div class="col-md-7" th:style="'background: rgb(6,6,8,0.75); box-shadow: 0 4px 8px 0 rgba(0, 0, 0), 0 6px 20px 0 rgba(0, 0, 0, 0.49)'">
-                <h1 class="ff-JSO text-cream">Welcome</h1>
-                <p class="mb-4 text-white ff-N">We are an independently-owned new and used bookstore located in Salt Lake City, Utah. 
+              <div class="col-md-8" th:style="'background: rgb(6,6,8,0.75); box-shadow: 0 4px 8px 0 rgba(0, 0, 0), 0 6px 20px 0 rgba(0, 0, 0, 0.49)'">
+                <h1 class="ff-JSH text-cream">Welcome</h1>
+                <p class="mb-4 text-white ff-NS">We are an independently-owned new and used bookstore located in Salt Lake City, Utah. 
                   We have over 90,000 items in our constantly-changing inventory, and we catalog an additional 1,000+ books per week. 
                   Our inventory consists of almost every literary genre you can think of. Additionally, our book inventory holds some rare and out-of-print titles.
              <!-- <br><br>If you have any questions, please give us a <a href="tel:8014853913">call</a> or <a href="mailto:customerservice@citywbooks.com">email</a> us. <br>We're always happy to help! -->
@@ -126,11 +126,11 @@
 
 
     <div class="site-section event-wrap" id="events-section">
-      <div class="container">
+      <div class="container navbar-target-container">
         <div class="row mb-4">
           <div class="col-12 text-center">
-          	<h3 class="section-sub-title">ONGOING</h3>
-			<h2 class="text-red ff-NG">EVENTS</h2>
+      		<h3 class="section-sub-title">ONGOING</h3>
+			<h2 class="text-red ff-NG">Events</h2>
           </div>
         </div>
       </div>
@@ -212,7 +212,7 @@
     </div>
     
     <div class="site-section" id="staff-picks-section">
-      <div class="container">
+      <div class="container navbar-target-container">
         <div class="row mb-5 justify-content-center">
           <div class="col-md-6 text-center">
             <h3 class="section-sub-title">Recommended</h3>
