--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -59,8 +59,8 @@
             </ul>
           </div>
           <div class="col-6">
-            <p class="mb-0 float-right"><span class="mr-3"><a href="tel:8014853913"> <span class="icon-phone mr-2" style="position: relative; top: 2px; color: white"></span><span class="d-none d-lg-inline-block text-cream">(801)-485-3913</span></a></span>
-            <span><a href="mailto:customerservice@citywbooks.com"><span class="icon-envelope mr-2" style="position: relative; top: 2px; color: white;"></span><span class="d-none d-lg-inline-block text-cream">customerservice@citywbooks.com</span></a></span></p>
+            <p class="mb-0 float-right"><span class="mr-3"><a href="tel:8014853913"> <span class="icon-phone mr-2" style="position: relative; top: 2px; color: white"></span><span class="d-none d-lg-inline-block text-cream">(801)-485-3913</span></a></span></p>
+            <p class="mb-0 float-right"><span class="mr-3"><span><a href="mailto:customerservice@citywbooks.com"><span class="icon-envelope mr-2" style="position: relative; top: 2px; color: white;"></span><span class="d-none d-lg-inline-block text-cream">customerservice@citywbooks.com</span></a></span></p>
           </div>
         </div>
       </div> 
@@ -366,7 +366,7 @@
 	</div>
 	-->
     
-    <!--  
+    <!--
     <div class="site-blocks-cover overlay get-notification" id="special-section" th:style="'background: url(/images/storefront/central.jpg)  no-repeat 50% fixed / cover;'" data-aos="fade">
       <div class="container">
 
@@ -375,7 +375,7 @@
             <h3 class="section-sub-title">Special Promo</h3>
             <h3 class="section-title text-white mb-4">Summer Sale</h3>
             <p class="mb-5 lead">Repudiandae nostrum natus excepturi fuga ullam accusantium vel ut eveniet aut consequatur laboriosam ipsam.</p>
-            
+
             <div id="date-countdown" class="mb-5"></div>
 
             <p><a href="#" class="btn btn-white btn-outline-white py-3 px-5 rounded-0 mb-lg-0 mb-2 d-block d-sm-inline-block">Shop Now</a></p>
@@ -385,6 +385,23 @@
       </div>
     </div>
     -->
+
+    <div class="site-blocks-cover inner-page-cover overlay get-notification"  style="'background: url(/images/storefront/mainPic.jpg)  no-repeat 50% fixed / cover;'" data-aos="fade">
+      <div class="container" th:style="'background: rgb(0,0,0,0.3);'">
+
+        <div class="row align-items-center justify-content-center">
+          <form class="col-md-7" method="post">
+            <h2 class = "ff-JSO">Get notified about upcoming events!</h2>
+            <div class="d-flex mb-4">
+              <input type="text" class="form-control rounded-0" placeholder="Enter your email address">
+              <input type="submit" class="btn btn-white btn-outline-white rounded-0" value="Subscribe">
+            </div>
+<!--            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat commodi veniam doloremque ducimus tempora.</p>-->
+          </form>
+        </div>
+
+      </div>
+    </div>
 
 <!--  old contact form
     <div class="site-section bg-light" id="contact-section" style="background: #8f5100;">
@@ -482,8 +499,8 @@
           </div>
           <div class="col-md-3 ml-auto">
             <h2 class="footer-heading mb-4">Featured Product</h2>
-            <a href="#"><img th:src="@{/images/bookshelves/cbe_0040.JPG}" alt="Image" class="img-fluid mb-3"></a>
-            <h4 class="h5">Leather Brown Shoe</h4>
+            <a href="#"><img th:src="@{/images/books/book.png}" alt="Image" class="img-fluid mb-3"></a>
+            <h4 class="h5">Book Lorem Ipsum</h4>
             <strong class="text-black mb-3 d-inline-block">$60.00</strong>
             <p><a href="#" class="btn btn-black rounded-0">Add to Cart</a></p>
           </div>
