--- a/webapp/src/main/resources/static/css/style.css
+++ b/webapp/src/main/resources/static/css/style.css
@@ -75,6 +75,7 @@ h1, h2, h3, h4, h5,
 
 .ff-NG{ font-family: 'Nanum Gothic', sans-serif; font-size: 4em; }
 .ff-NGH{ font-family: 'Nanum Gothic', sans-serif; font-size: 3em; }
+.ff-JSL{ font-family: 'Julius Sans One', sans-serif; font-size: 3em; font-weight: 700; }
 .ff-JSO{ font-family: 'Julius Sans One', sans-serif; font-size: 2.5em; }
 .ff-JSH{ font-family: 'Julius Sans One', sans-serif; font-size: 2em; font-weight: 600; }
 .ff-NSB{ font-family: 'Nunito', sans-serif; font-size: 1.6em; font-weight: 600; }
@@ -1841,12 +1842,10 @@ h1, h2, h3, h4, h5,
 
 .get-notification {
   background: url('../images/storefront/mainPic.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
   text-align: center; }
-.get-notification h2 {
-  /*font-size: 28px;*/
-  font-size: 3rem;
-  color: #fff;
-  margin-bottom: 30px; }
 .get-notification .form-control {
   background: none;
   border-width: 2px;
